# Model-Based-Agent-Evaluation

./: .env.example  .gitignore  LICENSE.txt  Makefile  NEXT_STEPS.md  PROJECT_SUMMARY.md  README.md  TASKS.md  pyproject.toml  requirements.txt
.gemini/: settings.json
evaluations/: README.md  __init__.py  harness.py  test_playbook_fix_bug.py
examples/: run_agent.py  virtual-plugin-example.md
playbooks/: playbook_command_and_capture.md  playbook_copy_file.md  playbook_fix_bug.md  playbook_list_files.md  playbook_read_specific_file.md  playbook_update_description.md
scripts/: run_plugin.sh  symlnk_example.sh
tasks/: 00_problem-definition_in.md  00_problem-definition_out.md  01_problem-definition-refinement_in.md  01_problem-definition-refinement_out.md  02_software-modeling-concepts_in.md  02_software-modeling-concepts_out.md  03_software-modeling-concepts-2_in.md  03_software-modeling-concepts-2_out.md  04_software-modeling-concepts-3_in.md  04_software-modeling-concepts-3_out.md  05_software-modeling-concepts-4_in.md  05_software-modeling-concepts-4_out.md  06_software-modeling-concepts-5_in.md  06_software-modeling-concepts-5_out.md  07_software-modeling-concepts-6_in.md  07_software-modeling-concepts-6_out.md  08_software-modeling-concepts-7_in.md  08_software-modeling-concepts-7_out.md  09_software-modeling-concepts-8_in.md  09_software-modeling-concepts-8_out.md  10_agent-and-tools-complete_in.md  10_project-plan_out.md  11_plan-refinement_in.md  11_plan-refinement_out.md  12_plan-technical_in.md  12_plan-technical_out.md  13_task-list_in.md  _README.md  (+6 more)
(+31 files in other folders)
